<resources>
    <string name="app_name">Simple Reminder App</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="time">Time</string>
    <string name="create_note">Create Reminder</string>
    <string name="add_note"> Add_Reminder</string>
    <string name="title_hint">enter title…</string>
    <string name="description_hint">enter description…</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in_google">SIGN BY GOOGLE</string>
</resources>
