<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_add_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/showDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/add_note"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showDateTV"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTv"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="1dp">

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/title_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="textStart" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardTitle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/description"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTv"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="1dp">

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/description_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/timeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardDescription"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/time"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeTv"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:id="@+id/dateLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/timeIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:src="@drawable/ic_date_range_black_24dp"  />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="10dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/createProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardTime"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/register_background"
        android:text="@string/create_note"
        android:textColor="@color/colorWhite" />
</RelativeLayout>
